# mully-mouth

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  QUICK_TRAINING.md  README.md  SECURE_CREDENTIALS_GUIDE.md  SYSTEM_TRAY_GUIDE.md  TRAINING_GUIDE.md  VOICE_CONFIGURATION_GUIDE.md  capture_idle_screen.py  install.bat  mully-mouth-simple-spec.md  mully-mouth.bat  pyproject.toml  requirements.txt  setup_credentials.bat  setup_credentials.py  setup_wizard.py  train_from_images.py  validate.py
.claude/: settings.local.json
.specify/memory/: constitution.md
config/: config.yaml  config.yaml.template
data/personalities/: documentary.yaml  encouraging.yaml  ex-girlfriend.yaml  jerk.yaml  neutral.yaml  sarcastic.yaml  sexy.yaml  unhinged.yaml
data/training/: README.md  few_shot_examples.json
data/training/images/idle/: README.md
specs/001-golf-narration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-golf-narration/checklists/: requirements.md
specs/001-golf-narration/contracts/: service-interfaces.md
src/cli/: main.py  monitor.py  tray_app.py
src/lib/: config.py  credentials.py  exceptions.py  single_instance.py  utils.py
src/models/: correction.py  outcome.py  session.py  shot_event.py
src/services/: ai_analyzer.py  commentary_generator.py  learning_service.py  motion_detector.py  pattern_cache.py  screen_capture.py  screen_classifier.py  session_service.py  voice_service.py
tests/: test_learning_service.py  test_pattern_cache.py
